--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.17",
+    "@types/nodemailer": "^6.4.7",
     "@types/supertest": "^2.0.12",
     "jest": "^29.3.1",
     "sqlite3": "^5.1.4",
@@ -33,7 +34,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.8.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.11",
